--- a/test2/03-rbac.yaml
+++ b/test2/03-rbac.yaml
@@ -23,7 +23,7 @@ metadata:
   name: test2
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: test2
 subjects:
   - kind: ServiceAccount
