--- a/test2/03-rbac.yaml
+++ b/test2/03-rbac.yaml
@@ -5,6 +5,7 @@ metadata:
   annotations:
     rbac.authorization.kubernetes.io/autoupdate: "true"
   name: test2
+  namespace: team1-dev
 rules:
   # this is for the 00-presync-create-cert-cm-job
   - apiGroups:
@@ -21,6 +22,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: test2
+  namespace: team1-dev
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
