Add policy and ap
Signed-off-by: Alexis de Talhouët <adetalhouet89@gmail.com>

--- a/app.yaml
+++ b/app.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: team1-dev
-  project: team1
+  project: default
   source:
     path: test2
     repoURL: 'https://github.com/adetalhouet/team1-argocdproject-test'
